--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,28 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
         integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
-
+    </head>    
+    
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: deepskyblue">
+        <a class="navbar-brand" href="#"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Переключатель навигации">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="diplom.html">Главная
+                        <span class="sr-only">(текущая)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="delivery.html">Доставка</a>
+                </li>  
+            </ul>
+        </div>
+    </nav>
 
     <div class="container">
         <h1 class="text-center">Связаться с нами</h1>
@@ -56,4 +76,6 @@
 
     </div>
 </body>
+
+
 
